src/test/ui/mismatched_types/E0053.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/E0053.rs:19:15
   |
12 |     fn foo(x: u16); //~ NOTE type in trait
   |               --- type in trait
...
19 |     fn foo(x: i16) { }
   |               ^^^ expected u16, found i16

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/E0053.rs:22:12
   |
13 |     fn bar(&self); //~ NOTE type in trait
   |            ----- type in trait
...
22 |     fn bar(&mut self) { }
   |            ^^^^^^^^^ types differ in mutability
   |
   = note: expected type `fn(&Bar)`
              found type `fn(&mut Bar)`

error: aborting due to 2 previous errors

